// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Install package 1`] = `
┌────┬──────────┬─────────┬────────────┬─────────┬───────────────────────────────┐
│ Id │ Name     │ Version │ Date       │ License │ Tags                          │
├────┼──────────┼─────────┼────────────┼─────────┼───────────────────────────────┤
│ -  │ Surge XT │ 1.3.4   │ 2024-08-11 │ gpl-3.0 │ Instrument, Synth, Modulation │
└────┴──────────┴─────────┴────────────┴─────────┴───────────────────────────────┘
`;

exports[`Install package 2`] = `
┌────┬──────────┬─────────┬────────────┬─────────┬───────────────────────────────┐
│ Id │ Name     │ Version │ Date       │ License │ Tags                          │
├────┼──────────┼─────────┼────────────┼─────────┼───────────────────────────────┤
│ -  │ Surge XT │ 1.3.1   │ 2024-03-02 │ gpl-3.0 │ Instrument, Synth, Modulation │
└────┴──────────┴─────────┴────────────┴─────────┴───────────────────────────────┘
`;

exports[`Install package 3`] = `No result found`;
